# phytium-mci

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  quality-check.yml  release.yml
docs/: update log.md
src/: aarch.rs  lib.rs  regs.rs  tools.rs
src/iopad/: constants.rs  err.rs  mod.rs  regs.rs
src/mci/: constants.rs  consts.rs  err.rs  mci_cmd.rs  mci_cmddata.rs  mci_config.rs  mci_data.rs  mci_dma.rs  mci_hardware.rs  mci_intr.rs  mci_irq.rs  mci_pio.rs  mci_timing.rs  mod.rs  regs.rs
src/mci_host/: constants.rs  err.rs  mci_card_base.rs  mci_host_card_detect.rs  mci_host_config.rs  mci_host_device.rs  mci_host_transfer.rs  mod.rs
src/mci_host/mci_sdif/: constants.rs  consts.rs  mod.rs  sdif_device.rs
src/mci_host/sd/: constants.rs  consts.rs  io_voltage.rs  mod.rs  status.rs  usr_param.rs
src/osa/: consts.rs  err.rs  mod.rs  pool_buffer.rs  semaphore.rs
src/python/: code_gen_xreg0.py  code_gen_xreg1.py  temp.py
tests/: test.rs
