[package]
name = "phytium-mci"
version = "0.1.0"
edition = "2024"
description = "A no_std Rust driver for SD/MMC cards on Phytium E2000 series SoCs"
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://github.com/drivercraft/phytium-mci"
homepage = "https://github.com/drivercraft/phytium-mci"
documentation = "https://docs.rs/phytium-mci"
license = "MIT"
readme = "README.md"
keywords = ["sd", "phytium", "no-std", "embedded", "driver"]
categories = ["no-std", "embedded", "hardware-support"]

[dependencies]
tock-registers = "0.9.0"
log = "0.4"
dma-api = { version = "0.2", features = ["alloc"] }
nb = "1.1"
bitflags = "2.8"
bytemuck = "1.22.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.10.0"
rlsf = "0.2.1"

[dev-dependencies]
# Hardware integration test dependencies (for tests/test.rs)
bare-test = "0.7"
byte-unit = { version = "5.1.6", default-features = false, features = ["byte"] }
spin_on = "0.1.1"

[build-dependencies]
bare-test-macros = "0.2"

[features]
default = ["pio"]
dma = []
pio = []

[[test]]
name = "test"
harness = false